fix: correct page overflow

--- a/web/app/themes/lukeboyle/src/sass/style.scss
+++ b/web/app/themes/lukeboyle/src/sass/style.scss
@@ -55,6 +55,8 @@ body {
 	display: flex;
 	min-height: 100vh;
 	flex-direction: column;
+	overflow-x: hidden;
+	-webkit-overflow-scrolling: touch;
 }
 
 .site-main {
